UY-1207 defined idp configuration and parsing of SAML metadata to it